11_v2_deployment/k8s_copilot/data/manifests/redis-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-master
    environment: production
    version: v1.0.0
  name: redis-master
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-master
  template:
    metadata:
      labels:
        app: redis-master
        version: v1.0.0
    spec:
      containers:
      - env:
        - name: APP_ENV
          value: production
        - name: LOG_LEVEL
          value: info
        image: redis-master:latest
        name: redis-master
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 256Mi
